--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,8 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  /*background-color: #282c34;*/
+  background-color: #e2e2e2;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -27,6 +28,27 @@
 .App-link {
   color: #61dafb;
 }
+
+.formulario{
+  justify-content: center;
+  width: 800px;
+  height: 300px;
+}
+
+h2{
+  color: black;
+}
+
+.label_form1{
+  margin-right: 20px;
+  text-align: left;
+  color: black;
+}
+
+.input_form{
+    text-align: center;
+}
+
 
 @keyframes App-logo-spin {
   from {
